<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InputActivity">

    <TextView
        android:id="@+id/select_size_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/vehicle_size"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/vehicle_size_rg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select_size_title"
        android:checkedButton="@+id/vehicle_size_lv">

        <RadioButton
            android:id="@+id/vehicle_size_lv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/light_vehicle"
            android:layout_weight="1"

            />

        <RadioButton
            android:id="@+id/vehicle_size_hv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/heavy_vehicle"
            android:layout_weight="1"
            />

        <RadioButton
            android:id="@+id/vehicle_size_hmv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/heavy_multi_vehicle"
            android:layout_weight="1"
            />
    </RadioGroup>



    <TextView
        android:id="@+id/distance_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/distance_title_24_km"
        android:textSize="16dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vehicle_size_rg" />

    <LinearLayout
        android:id="@+id/distance_container"
        android:orientation="horizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/distance_title">
        <EditText
            android:id="@+id/distance_et"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="9"
            android:textSize="16sp"
            android:inputType="numberDecimal"/>
        <TextView
            android:id="@+id/distance_unit_title"
            android:textSize="16sp"
            android:text="@string/km"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>

    <TextView
        android:id="@+id/time_of_day"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/time_of_day"
        android:textSize="16dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/distance_container" />

    <Spinner
        android:id="@+id/time_of_day_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@+id/time_of_day" />

    <TextView
        android:id="@+id/direction_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/direction"
        android:textSize="16dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/time_of_day_spinner" />

    <RadioGroup
        android:id="@+id/direction_rg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/direction_title"
        android:checkedButton="@+id/direction_eb">

        <RadioButton
            android:id="@+id/direction_eb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/east_bound"
            android:layout_weight="1"
            />

        <RadioButton
            android:id="@+id/direction_wb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/west_bound"
            android:layout_weight="1"
            />

    </RadioGroup>

    <LinearLayout
        android:id="@+id/transponder_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/direction_rg" >
        <TextView
            android:id="@+id/transponder_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/transponder"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_weight="5"/>
        <Switch
            android:id="@+id/transponder_switch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/online_calc_cb_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/transponder_container" >
        <TextView
            android:id="@+id/online_calc_cb_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/load_online_calculator"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_weight="5"/>
        <CheckBox
            android:id="@+id/online_calc_cb"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>

    <Button
        android:id="@+id/calculate_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:text="@string/calculate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/online_calc_cb_container"/>

</androidx.constraintlayout.widget.ConstraintLayout>